add css styling

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
     <script defer src="img.js"></script>
   </head>
   <body>
-    <button id="buttom">Get photos</button>
+    <nav class="nav">
+      <div class="content0">
+        <button id="buttom">Get photos</button>
+      </div>
+    </nav>
     <div id="content"></div>
   </body>
 </html>
