add custom css class and fix transition duration for button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="nav">
             <div class="content0">
-                <button id="buttom">Get photos</button>
+                <button class="get-button" id="button">Get photos</button>
             </div>
         </nav>
         <div id="content"></div>
